--- a/Todo.Infrastructure/Todo.Infrastructure.csproj
+++ b/Todo.Infrastructure/Todo.Infrastructure.csproj
@@ -15,6 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Todo.Application.Abstraction\Todo.Application.Abstraction.csproj" />
       <ProjectReference Include="..\Todo.Domain\Todo.Domain.csproj" />
     </ItemGroup>
 
