add ef migration

--- a/Todo.Api/appsettings.Development.json
+++ b/Todo.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "ToDoDatabase": "Server=localhost,6433;Database=ToDoDB;User Id=sa;Password=Sf!j*5MsU_z4!3DnQlInsr5X8;TrustServerCertificate=True;"
   }
 }
