--- a/Todo.Api/appsettings.json
+++ b/Todo.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ToDoDatabase": "Server=localhost,6433;Database=ToDoDB;User Id=sa;Password=Sf!j*5MsU_z4!3DnQlInsr5X8;TrustServerCertificate=True;"
+  }
 }
