--- a/Todo.Domain/Todo.Domain.csproj
+++ b/Todo.Domain/Todo.Domain.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="Ardalis.GuardClauses" Version="5.0.0" />
+      <PackageReference Include="Mediator.Abstractions" Version="2.1.7" />
     </ItemGroup>
 
 </Project>
