--- a/Todo.Application/Todo.Application.csproj
+++ b/Todo.Application/Todo.Application.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Todo.Application.Abstraction\Todo.Application.Abstraction.csproj" />
+      <ProjectReference Include="..\Todo.Application.Shared\Todo.Application.Shared.csproj" />
       <ProjectReference Include="..\Todo.Domain\Todo.Domain.csproj" />
     </ItemGroup>
 
