--- a/Todo.Api/appsettings.json
+++ b/Todo.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ToDoDatabase": "Server=localhost,6433;Database=ToDoDB;User Id=sa;Password=Sf!j*5MsU_z4!3DnQlInsr5X8;TrustServerCertificate=True;"
+    "ToDoDatabase": "Server=ToDoMSSQL;Database=ToDoDB;User Id=sa;Password=Sf!j*5MsU_z4!3DnQlInsr5X8;TrustServerCertificate=True;"
   }
 }
