--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,24 @@
-version: "3.3"
+version: "3.8"
 
 services:
-  todo.api:
+  api:
     image: todo.api
+    container_name: ToDoAPI
+    restart: always
     build:
       context: .
       dockerfile: Todo.Api/Dockerfile
+    environment:
+      ASPNETCORE_ENVIRONMENT: "Production"
     ports:
       - "6480:8080"
+    depends_on:
+      - db
 
   db:
     image: mcr.microsoft.com/mssql/server:2022-latest
-    restart: no
+    container_name: ToDoMSSQL
+    restart: always
     environment:
       ACCEPT_EULA: "Y"
       SA_PASSWORD: "Sf!j*5MsU_z4!3DnQlInsr5X8"
